syntax = "proto3";

package review;

option go_package = "github.com/dmehra2102/learning-platform/shared/proto/review";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service ReviewService {
    rpc CreateReview(CreateReviewRequest) returns (ReviewResponse);
    rpc GetReview(GetReviewRequest) returns (ReviewResponse);
    rpc UpdateReview(UpdateReviewRequest) returns (ReviewResponse);
    rpc DeleteReview(DeleteReviewRequest) returns (google.protobuf.Empty);
    rpc ListCourseReviews(ListCourseReviewsRequest) returns (ListReviewsResponse);
    rpc GetCourseRatingStats(GetCourseRatingStatsRequest) returns (CourseRatingStatsResponse);
    rpc GetUserReview(GetUserReviewRequest) returns (ReviewResponse);
}

message Review {
    string id = 1;
    string user_id = 2;
    string course_id = 3;
    int32 rating = 4;
    string comment = 5;
    google.protobuf.Timestamp created_at = 6;
    google.protobuf.Timestamp updated_at = 7;
}

message CreateReviewRequest {
    string user_id = 1;
    string course_id = 2;
    int32 rating = 3;
    string comment = 4;
}

message ReviewResponse {
    Review review = 1;
}

message GetReviewRequest {
    string id = 1;
}

message UpdateReviewRequest {
    string id = 1;
    optional int32 rating = 2;
    optional string comment = 3;
}

message DeleteReviewRequest {
    string id = 1;
}

message ListCourseReviewsRequest {
    string course_id = 1;
    int32 page = 2;
    int32 page_size = 3;
    optional int32 min_rating = 4;
}

message ListReviewsResponse {
    repeated Review reviews = 1;
    int32 total = 2;
    int32 page = 3;
    int32 page_size = 4;
}

message GetCourseRatingStatsRequest {
    string course_id = 1;
}

message CourseRatingStatsResponse {
    string course_id = 1;
    double average_rating = 2;
    int32 total_reviews = 3;
    map<int32, int32> rating_distribution = 4; // rating -> count
}

message GetUserReviewRequest {
    string user_id = 1;
    string course_id = 2;
}